test/Fail/PatternSynonymMutualBlock.agda
module PatternSynonymMutualBlock where

data D : Set where
  c : D

mutual
  pattern p = c
